# std_slop

./: .bazelrc  .clang-format  .clang-tidy  .gitignore  BUILD.bazel  CMakeLists.txt  CONTEXT_MANAGEMENT.md  CONTRIBUTING.md  MODULE.bazel  OAUTH.md  README.md  SCHEMA.md  SESSIONS.md  USERGUIDE.md  WALKTHROUGH.md  apply_patch.md  bazelrc  build_log.txt  build_migration.md  check_macro_test.cpp  clasp_migration.md  color.h  command_definitions.cpp  command_definitions.h  command_handler.cpp  command_handler.h  command_handler_test.cpp  commands.json  completer.cpp  completer.h  completer_test.cpp  completion.cpp  completion.h  completion_test.cpp  completions.md  constants.h  context_management_test.cpp  database.cpp  database.h  database_test.cpp  (+49 more)
core/: BUILD.bazel  cancellation.cpp  cancellation.h  cancellation_test.cpp  check_macro_test.cpp  constants.h  database.cpp  database.h  database_test.cpp  deps_test.cpp  http_client.cpp  http_client.h  http_client_test.cpp  mail_model_test.cpp  message_parser.cpp  message_parser.h  oauth_handler.cpp  oauth_handler.h  oauth_handler_test.cpp  orchestrator.cpp  orchestrator.h  orchestrator_gemini.cpp  orchestrator_gemini.h  orchestrator_openai.cpp  orchestrator_openai.h  orchestrator_openai_test.cpp  orchestrator_strategy.h  orchestrator_test.cpp  orchestrator_types.h  shell_util.cpp  shell_util.h  shell_util_test.cpp  slop_auth.sh  sqlite_test.cpp  status_macros.h  system_info_test.cpp  tool_dispatcher.cpp  tool_dispatcher.h  tool_dispatcher_test.cpp  tool_executor.cpp  (+6 more)
docs/: mail_model.md  mail_model_impl.md
interface/: BUILD.bazel  color.h  command_definitions.cpp  command_definitions.h  command_handler.cpp  command_handler.h  command_handler_test.cpp  completer.cpp  completer_test.cpp  context_management_test.cpp  input_parsing_test.cpp  interaction_engine.cpp  interaction_engine.h  ui.cpp  ui.h  ui_test.cpp
lisp/: main.lisp  package.lisp  std-slop.asd
markdown/: BUILD.bazel  README.md  parser.cpp  parser.h  parser_test.cpp  renderer.cpp  renderer.h  renderer_test.cpp
scripts/: clang_format_wrapper.sh  clang_tidy_fix.sh  clang_tidy_wrapper.sh  fix.sh  lint.sh  run_clang_format.sh
