load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library", "cc_test")
load("@aspect_rules_lint//format:defs.bzl", "format_multirun", "format_test")
load("//:linters.bzl", "clang_tidy_test")

exports_files([".clang-tidy", "system_prompt.md"])

cc_binary(
    name = "std_slop",
    srcs = ["main.cpp"],
    copts = [
        "-std=c++17",
        "-fno-exceptions",
    ],
    deps = [
        "//core",
        "//interface",
        "//interface:color",
        "@abseil-cpp//absl/flags:flag",
        "@abseil-cpp//absl/flags:parse",
        "@abseil-cpp//absl/flags:usage",
        "@abseil-cpp//absl/log",
        "@abseil-cpp//absl/log:flags",
        "@abseil-cpp//absl/log:initialize",
        "@abseil-cpp//absl/log:log_sink",
        "@abseil-cpp//absl/log:log_sink_registry",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/time",
        "@nlohmann_json//:json",
        "@sqlite3//:sqlite3",
    ],
)

sh_binary(
    name = "clang_format_hermetic",
    srcs = ["scripts/clang_format_wrapper.sh"],
    data = ["@llvm_toolchain//:clang-format"],
    deps = ["@bazel_tools//tools/bash/runfiles"],
)

sh_binary(
    name = "clang_tidy_hermetic",
    srcs = ["scripts/clang_tidy_wrapper.sh"],
    data = ["@llvm_toolchain//:clang-tidy"],
    deps = ["@bazel_tools//tools/bash/runfiles"],
)

format_multirun(
    name = "format",
    cc = ":clang_format_hermetic",
    disable_git_attribute_checks = True,
)

format_test(
    name = "format_test",
    cc = ":clang_format_hermetic",
    srcs = glob(["*.cpp", "*.h"], allow_empty = True) + [
        "//core:core",
        "//interface:interface",
    ],
)

clang_tidy_test(
    name = "clang_tidy_test",
    srcs = [
        "//core",
        "//interface",
        ":std_slop",
    ],
)
