module(
    name = "std_slop",
    version = "0.1.0",
    bazel_compatibility = [">=8.0.0", "<=8.99.99"],
)

bazel_dep(name = "abseil-cpp", version = "20240116.2")
bazel_dep(name = "googletest", version = "1.14.0.bcr.1")
bazel_dep(name = "nlohmann_json", version = "3.11.3")
bazel_dep(name = "rules_cc", version = "0.1.1")
bazel_dep(name = "curl", version = "8.8.0")
bazel_dep(name = "mbedtls", version = "3.6.0")
bazel_dep(name = "sqlite3", version = "3.51.1.bcr.1")
bazel_dep(name = "readline", version = "8.2")
bazel_dep(name = "tree-sitter-bazel", version = "0.26.3.bcr.1")
bazel_dep(name = "aspect_rules_lint", version = "1.0.3")
bazel_dep(name = "aspect_bazel_lib", version = "2.7.7")
bazel_dep(name = "rules_multirun", version = "0.9.0")
bazel_dep(name = "toolchains_llvm", version = "1.2.0")

llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
llvm.toolchain(
    llvm_version = "17.0.6",
)
use_repo(llvm, "llvm_toolchain")

register_toolchains("@llvm_toolchain//:all")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "tree-sitter-markdown",
    build_file = "//third_party:tree-sitter-markdown/tree-sitter-markdown.BUILD",
    sha256 = "122be47d4a50ac75a4f6861a17c3c88144197e0949f5d83ca917f2382b37761b",
    strip_prefix = "tree-sitter-markdown-0.5.2",
    urls = ["https://github.com/tree-sitter-grammars/tree-sitter-markdown/archive/refs/tags/v0.5.2.tar.gz"],
)

http_archive(
    name = "tree-sitter-javascript",
    build_file = "//third_party:tree-sitter-javascript.BUILD",
    sha256 = "dd6fe23f90d9e6bdba6373d3953ccde481d8daf6fed43b502bfeab22b933222b",
    strip_prefix = "tree-sitter-javascript-0.21.0",
    urls = ["https://github.com/tree-sitter/tree-sitter-javascript/archive/refs/tags/v0.21.0.tar.gz"],
)

http_archive(
    name = "tree-sitter-python",
    build_file = "//third_party:tree-sitter-python.BUILD",
    sha256 = "720304a603271fa89e4430a14d6a81a023d6d7d1171b1533e49c0ab44f1e1c13",
    strip_prefix = "tree-sitter-python-0.21.0",
    urls = ["https://github.com/tree-sitter/tree-sitter-python/archive/refs/tags/v0.21.0.tar.gz"],
)

http_archive(
    name = "tree-sitter-cpp",
    build_file = "//third_party:tree-sitter-cpp.BUILD",
    sha256 = "f04d2f8cf2a5d22e5f819dbd49cdb6fc25b531debff464abfe0cab742c1148a5",
    strip_prefix = "tree-sitter-cpp-0.22.0",
    urls = ["https://github.com/tree-sitter/tree-sitter-cpp/archive/refs/tags/v0.22.0.tar.gz"],
)

http_archive(
    name = "tree-sitter-go",
    build_file = "//third_party:tree-sitter-go.BUILD",
    sha256 = "21b8afe0d1b096d1cfc3cfa459c160f020c462287e9ea29292f8fca51ff39346",
    strip_prefix = "tree-sitter-go-0.21.0",
    urls = ["https://github.com/tree-sitter/tree-sitter-go/archive/refs/tags/v0.21.0.tar.gz"],
)

http_archive(
    name = "tree-sitter-rust",
    build_file = "//third_party:tree-sitter-rust.BUILD",
    sha256 = "65065e6ad5164ff36066d774cb7a2bb41be7f06482e23ac1d464a3881fb2a975",
    strip_prefix = "tree-sitter-rust-0.21.2",
    urls = ["https://github.com/tree-sitter/tree-sitter-rust/archive/refs/tags/v0.21.2.tar.gz"],
)

http_archive(
    name = "tree-sitter-bash",
    build_file = "//third_party:tree-sitter-bash.BUILD",
    sha256 = "f0515efda839cfede851adb24ac154227fbc0dfb60c6c11595ecfa9087d43ceb",
    strip_prefix = "tree-sitter-bash-0.21.0",
    urls = ["https://github.com/tree-sitter/tree-sitter-bash/archive/refs/tags/v0.21.0.tar.gz"],
)
