load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")
load("@aspect_rules_lint//format:defs.bzl", "format_test")

genrule(
    name = "generate_system_prompt",
    srcs = ["//:system_prompt.md"],
    outs = ["system_prompt_data.h"],
    cmd = "echo 'namespace slop {' > $@ && " +
          "echo 'static const char* kBuiltinSystemPrompt = R\"PROMPT(' >> $@ && " +
          "cat $< >> $@ && " +
          "echo ')PROMPT\";' >> $@ && " +
          "echo '}' >> $@ ",
)

filegroup(
    name = "core_srcs",
    srcs = glob([
        "**/*.cpp",
        "**/*.h",
    ]),
    visibility = ["//visibility:public"],
)

cc_library(
    name = "cancellation",
    srcs = ["cancellation.cpp"],
    hdrs = ["cancellation.h"],
    visibility = ["//visibility:public"],
    deps = [
        "@abseil-cpp//absl/synchronization",
    ],
)

cc_library(
    name = "shell_lib",
    srcs = ["shell_util.cpp"],
    hdrs = ["shell_util.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":cancellation",
        "@abseil-cpp//absl/log",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
    ],
)

cc_library(
    name = "dispatcher",
    srcs = ["tool_dispatcher.cpp"],
    hdrs = ["tool_dispatcher.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":cancellation",
        "@abseil-cpp//absl/log",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/synchronization",
        "@nlohmann_json//:json",
    ],
)

cc_library(
    name = "core",
    srcs = [
        "database.cpp",
        "http_client.cpp",
        "message_parser.cpp",
        "oauth_handler.cpp",
        "orchestrator.cpp",
        "orchestrator_gemini.cpp",
        "orchestrator_openai.cpp",
        "tool_executor.cpp",
    ],
    hdrs = [
        "database.h",
        "http_client.h",
        "message_parser.h",
        "oauth_handler.h",
        "orchestrator.h",
        "orchestrator_gemini.h",
        "orchestrator_openai.h",
        "orchestrator_strategy.h",
        "tool_executor.h",
        "tool_types.h",
        "constants.h",
        "status_macros.h",
        ":generate_system_prompt",
    ],
    visibility = ["//visibility:public"],

    copts = [
        "-DSQLITE_ENABLE_COLUMN_METADATA",
        "-DSQLITE_ENABLE_FTS5",
    ],
    defines = ["HAVE_SYSTEM_PROMPT_H"],
    deps = [
        ":cancellation",
        ":shell_lib",
        "@sqlite3//:sqlite3",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/time",
        "@abseil-cpp//absl/container:flat_hash_map",
        "@abseil-cpp//absl/container:flat_hash_set",
        "@abseil-cpp//absl/log",
        "@abseil-cpp//absl/log:check",
        "@curl//:curl",
        "@nlohmann_json//:json",
    ],
)

[
    cc_test(
        name = test_name,
        srcs = [test_name + ".cpp"],
        copts = [
            "-DSQLITE_ENABLE_COLUMN_METADATA",
            "-DSQLITE_ENABLE_FTS5",
        ],
        deps = [
            ":core",
            ":dispatcher",
            ":shell_lib",
            ":cancellation",
            "//interface:ui",
            "//interface:color",
            "@sqlite3//:sqlite3",
            "@googletest//:gtest_main",
            "@nlohmann_json//:json",
            "@abseil-cpp//absl/status",
        ],
    )
    for test_name in [
        "database_test",
        "http_client_test",
        "orchestrator_test",
        "orchestrator_openai_test",
        "tool_executor_test",
        "oauth_handler_test",
        "system_info_test",
        "shell_util_test",
        "cancellation_test",
        "tool_dispatcher_test",
        "ui_thread_safety_test",
    ]
]

cc_test(
    name = "check_macro_test",
    srcs = ["check_macro_test.cpp"],
    copts = [],
    deps = [
        ":core",
        "//interface",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "tree_sitter_integration_test",
    srcs = ["tree_sitter_integration_test.cpp"],
    copts = [],
    deps = [
        "@tree-sitter-bazel//:tree-sitter",
        "@tree-sitter-markdown//:tree-sitter-markdown",
        "@tree-sitter-markdown//:tree-sitter-markdown-inline",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "sqlite_test",
    srcs = ["sqlite_test.cpp"],
    deps = [
        "@sqlite3//:sqlite3",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@googletest//:gtest_main",
    ],
)

format_test(
    name = "format_test",
    cc = "//:clang_format_hermetic", # Point back to your root tool
    srcs = glob(["*.cpp", "*.h"]),
)
