load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")
load("@aspect_rules_lint//format:defs.bzl", "format_test")



format_test(
    name = "format_test",
    cc = "//:clang_format_hermetic",
    srcs = glob(["*.cpp", "*.h"]),
)

cc_library(
    name = "color",
    hdrs = ["color.h"],
#    includes = [".."],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "completer",
    srcs = ["completer.cpp"],
    hdrs = ["completer.h"],
    visibility = ["//visibility:public"],
    deps = [
        "@abseil-cpp//absl/strings",
    ],
)

cc_library(
    name = "ui",
    srcs = ["ui.cpp"],
    hdrs = ["ui.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":color",
        ":completer",
        ":command_definitions",
        "//core",
        "//markdown:parser",
        "//markdown:renderer",
        "@abseil-cpp//absl/base:no_destructor",
        "@abseil-cpp//absl/log",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/synchronization",
        "@nlohmann_json//:json",
        "@readline//:readline",
    ],
)

cc_library(
    name = "command_definitions",
    srcs = ["command_definitions.cpp"],
    hdrs = ["command_definitions.h"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "interface",
    srcs = [
        "command_handler.cpp",
    ],
    hdrs = [
        "command_handler.h",
    ],
    visibility = ["//visibility:public"],
    defines = ["HAVE_READLINE"],
    deps = [
        ":color",
        ":completer",
        ":ui",
        ":command_definitions",
        "//markdown:parser",
        "//markdown:renderer",
        "//core",
        "@readline//:readline",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/container:flat_hash_map",
        "@nlohmann_json//:json",
    ],
)

cc_library(
    name = "interaction_engine",
    srcs = ["interaction_engine.cpp"],
    hdrs = ["interaction_engine.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":interface",
        ":ui",
        "//core",
        "//core:dispatcher",
        "//core:shell_lib",
        "@abseil-cpp//absl/log",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/time",
    ],
)

[
    cc_test(
        name = test_name,
        srcs = [test_name + ".cpp"],
        deps = [
            ":interface",
            "//core",
            "@googletest//:gtest_main",
        ],
    )
    for test_name in [
        "command_handler_test",
        "ui_test",
        "input_parsing_test",
        "completer_test",
        "context_management_test",
    ]
]
