load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")
load("@aspect_rules_lint//format:defs.bzl", "format_test")

package(default_visibility = ["//visibility:public"])

format_test(
    name = "format_test",
    cc = "//:clang_format_hermetic", # Point back to your root tool
    srcs = glob(["*.cpp", "*.h"]),
)
cc_library(
    name = "parser",
    srcs = ["parser.cpp"],
    hdrs = ["parser.h"],
    deps = [
        "@tree-sitter-bazel//:tree-sitter",
        "@tree-sitter-markdown//:tree-sitter-markdown",
        "@tree-sitter-markdown//:tree-sitter-markdown-inline",
        "@tree-sitter-javascript//:tree-sitter-javascript",
        "@tree-sitter-python//:tree-sitter-python",
        "@tree-sitter-cpp//:tree-sitter-cpp",
        "@tree-sitter-go//:tree-sitter-go",
        "@tree-sitter-bash//:tree-sitter-bash",
        "@tree-sitter-rust//:tree-sitter-rust",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
    ],
)

cc_library(
    name = "renderer",
    srcs = ["renderer.cpp"],
    hdrs = ["renderer.h"],
    deps = [
        ":parser",
        "//interface:color",
        "@abseil-cpp//absl/strings",
    ],
)

cc_test(
    name = "parser_test",
    srcs = ["parser_test.cpp"],
    deps = [
        ":parser",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "renderer_test",
    srcs = ["renderer_test.cpp"],
    deps = [
        ":renderer",
        "//interface:color",
        "@googletest//:gtest_main",
    ],
)
